# click-template-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
click_template_cli/: cli.py
tests/: test_cli.py
